--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,10 @@ $yellow: #F4E041;
 $blue: #00BDD3;
 $light-gray: #F8F8F8;
 
+html{
+    background: $light-gray;
+}
+
 section {
     padding: 140px 0 0 0;
     &:last-child{
@@ -74,6 +78,7 @@ p {
     border: none;
     transition: background-color .1s ease-in;
     cursor: pointer;
+    color: #000000DE;
 
     &:hover {
         background-color: #FFE302;
@@ -252,6 +257,25 @@ header {
         transition: .2s ease-in;
 
     }
+    span{
+        position: absolute;
+        left: 0;
+        bottom: -45%;
+        font-size: 12px;
+        color: #7E7E7E;
+        line-height: 1.16;
+    }
+    &.false-validation{
+        span{
+            color: #CB3D40;
+        }
+        input{
+            border-color: #CB3D40;
+        }
+        label{
+            color: #CB3D40;
+        }
+    }
 }
 
 .radio-block {
@@ -302,7 +326,6 @@ header {
 
 .image-block {
     width: 100%;
-    padding: 14px;
     position: relative;
 
     input {
