--- a/src/App.scss
+++ b/src/App.scss
@@ -7,9 +7,12 @@ $light-gray: #F8F8F8;
 html {
     background: $light-gray;
 }
-input, button{
+
+input,
+button {
     outline: none !important;
 }
+
 section {
     padding: 140px 0 0 0;
 
@@ -226,6 +229,16 @@ header {
 }
 
 // Post request
+
+.error-message {
+    position: absolute;
+    left: 0;
+    bottom: -45%;
+    font-size: 12px;
+    color: #7E7E7E;
+    line-height: 1.16;
+}
+
 .input-block {
     width: 100%;
     position: relative;
@@ -241,8 +254,8 @@ header {
 
         &:focus+label,
         &:not(:placeholder-shown)+label {
-            top: 0;
-            transform: translateY(-50%) scale(.8) translateX(-10px);
+            top: 0 !important;
+            transform: translateY(-50%) scale(.8) translateX(-10px) !important;
             background-color: $light-gray;
         }
     }
@@ -258,6 +271,7 @@ header {
         color: #7E7E7E;
         padding: 5px;
         transition: .2s ease-in;
+        pointer-events: none;
 
     }
 
@@ -270,8 +284,8 @@ header {
         line-height: 1.16;
     }
 
-    &.false-validation {
-        span {
+    &.false-validate {
+        .error-message {
             color: #CB3D40;
         }
 
@@ -297,7 +311,7 @@ header {
         position: absolute;
         opacity: 0;
 
-        +label {
+        & +label {
             cursor: pointer;
 
             &::before {
@@ -386,7 +400,7 @@ header {
     cursor: pointer;
     border: 1px solid rgba(0, 0, 0, 0.87);
     border-radius: 4px 0px 0px 4px;
-    
+
 }
 
 .file-text {
@@ -399,31 +413,32 @@ header {
     padding: 14px;
     color: #7E7E7E;
     overflow: hidden;
-        text-overflow: ellipsis;
+    text-overflow: ellipsis;
 }
+
 @keyframes loading {
-    0%{
+    0% {
         transform: rotate(0deg);
     }
-    50%{
-        transform: rotate(180deg);
-    }
-    100%{
+
+    100% {
         transform: rotate(360deg);
     }
 }
-.loader-block{
+
+.loader-block {
     height: 550px;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.loader{
-    img{
-        animation: loading .5s ease-in-out infinite;
+
+.loader {
+    img {
+        animation: loading .5s linear infinite;
     }
-   
+
 }
 
 .success-block {
