--- a/src/App.scss
+++ b/src/App.scss
@@ -62,6 +62,7 @@ body {
     background-color: $light-gray;
 }
 
+
 h1 {
     font-weight: 400;
     font-size: 40px;
@@ -359,43 +360,12 @@ form{
     }
 }
 
-.image-block {
-    width: 100%;
-    position: relative;
-
-    input {
-        width: 20%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        position: absolute;
-        opacity: 0;
-
-        &::after {
-            content: '';
-            height: 30px;
-            width: 30px;
-            border: 1px solid black;
-            border-radius: 4px 0px 0px 4px;
-        }
-    }
-
-    label {
-        display: block;
-        margin-left: auto;
-    }
-    &.false-validate{
-        .error-message{
-            color: #CB3D40;
-        }
-    }
-}
 
 .image-block {
     margin-top: 50px;
     width: 100%;
-    height: 54px;
-
+    padding: 14px 0;
+    position: relative;
 
     label {
         height: 100%;
@@ -407,9 +377,33 @@ form{
 
         input {
             width: 20%;
-            padding: 14px;
+            height: 100%;
+            top: 0;
+            left: 0;
             position: absolute;
             opacity: 0;
+    
+            &::after {
+                content: '';
+                border: 1px solid black;
+                border-radius: 4px 0px 0px 4px;
+            }
+        }
+    }
+    &.false-validate{
+        label{
+            input{
+                &::after{
+                    border: 2px solid #CB3D40;
+                }
+            }
+        }
+        .button-file{
+            border-color: #CB3D40;
+            border-width: 2px;
+        }
+        .error-message{
+            color: #CB3D40;
         }
     }
 }
@@ -419,6 +413,7 @@ form{
     cursor: pointer;
     border: 1px solid rgba(0, 0, 0, 0.87);
     border-radius: 4px 0px 0px 4px;
+    transform: border-width .2s ease-in-out;
 
 }
 
